# goscalc

./: .gitignore  CMakeLists.txt  LICENSE_MIT  README.md  version.cmake
element_configs/C/: config.json
element_configs/C_cfg/: config.json
element_configs/Cu/: config.json
element_configs/H/: config.json
element_configs/H_cfg/: config.json
element_configs/Nb_cfg/: config.json
element_configs/Pb_cfg/: config.json
element_configs/Si/: config.json
element_configs/Si_ion_cfg/: config.json
element_configs/Y_cfg/: config.json
element_configs/Yb_cfg/: config.json
element_configs/Zr_cfg/: config.json
element_configs/general_cfg/: wavegen_mod.f
element_configs/ion_test/: wavegen_mod
element_configs2/Pb_cfg/: config.json
element_configs2/Si_cfg/: config.json
scripts/: Scripts.md  assemble_gos5_file.py  assemble_gosh_file.py  compute_all_gos.py  goscalc_confgen.py  metadata.json
src/: calc_gos.cpp  calc_gos.hpp  contwave.c  goscalc_constants.hpp  goscalc_exceptions.hpp  goscalc_io.cpp  goscalc_io.hpp  goscalc_shared_data.hpp  hankel_trafo.cc  hankel_trafo.hpp  logger.hpp  main.cpp  path_switcher.hpp  prepare_wavefunctions.cpp  prepare_wavefunctions.hpp  value_pairs.cc  value_pairs.hpp
wavegen_mod/: backup_wavegen_mod.f  wavegen_mod.f
